--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Edu+NSW+ACT+Foundation&family=Orbitron&family=Pangolin&family=Rampart+One&family=Rock+Salt&display=swap"
         rel="stylesheet">
-    <title>Home of the Games</title>
+    <title>Blogs Central</title>
     <link href="/static/css/2.000397dc.chunk.css" rel="stylesheet">
     <link href="/static/css/main.020ccfc4.chunk.css" rel="stylesheet">
 </head>
