--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Blog Central</title>
   </head>
-  <body>
+  <body>Hello World
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
